[package]
name = "chaos"
version = "0.1.0"
authors = ["Zelda Hessler <zelda.hessler@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nannou = "0.14"
palette = "0.5"

[[example]]
name = "blend"
path = "./example/blend.rs"